# marko

./: .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: release.yml
examples/: example.md
plans/: TODO_FIX_TESTS.md  git-release-pipeline.md  instant-startup.md
src/: app.rs  lib.rs  main.rs  pandoc.rs  theme.rs  upgrade.rs
src/app/: clipboard.rs  input.rs  mod.rs  rename.rs  render.rs  save.rs  selection.rs  tests.rs
src/components/: editor.rs  header.rs  mod.rs  preview.rs  status.rs
src/git/: diff.rs  mod.rs  repo.rs
src/markdown/: autocomplete.rs  code_highlight.rs  math.rs  mod.rs  renderer.rs  style_ext.rs  table_format.rs
tests/: e2e_test.rs  git_test.rs  keybinding_test.rs  markdown_test.rs  pandoc_test.rs  render_test.rs  theme_test.rs
tests/fixtures/: sample.md
